--- a/app/views/ucas/fraud-contact.html
+++ b/app/views/ucas/fraud-contact.html
@@ -11,7 +11,7 @@
   <div class="govuk-grid-row add-top-margin">
     <div class="govuk-grid-column-two-thirds">
       <form action="/ucas/apply-preferences" method="post">
-        <p>This person will receive alerts about fradulent activity, for example similarity detection for a plagiarised personal statement.</p>
+        <p>This person will receive alerts about fradulent activity (for example when a plagiarised personal statement is detected).</p>
 
         {{ macros.textbox('fraud-contact-name', 'Name') }}
         {{ macros.textbox('fraud-contact-email', 'Email address') }}
