--- a/app/views/organisation.html
+++ b/app/views/organisation.html
@@ -85,13 +85,13 @@
 
         <p>Use this section to:</p>
         <ul class="govuk-list govuk-list--bullet">
-          <li>add and delete courses</li>
           <li>preview and publish courses</li>
           <li>write about each course</li>
           <li>copy content between courses</li>
           {% if not data['next-cycle'] %}
           <li>manage vacancies for each course</li>
           {% endif %}
+          <li>request new courses</li>
         </ul>
       </div>
 
