--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -284,3 +284,17 @@ dl.aligned.course-part-tasks dd {
     font-weight: bold;
   }
 }
+
+.location-list {
+  margin-bottom: govuk-spacing(8);
+}
+
+.location-list li {
+  border-bottom: 1px solid $govuk-border-colour;
+  padding-top: govuk-spacing(2);
+  padding-bottom: govuk-spacing(2);
+
+  &:last-child {
+    border: none;
+  }
+}
