--- a/app/views/course.html
+++ b/app/views/course.html
@@ -232,7 +232,7 @@
           }
         },
         {
-          label: "Details",
+          label: "Edit course details",
           id: "information",
           panel: {
             html: informationHtml
