--- a/app/views/new/ucas-not-yet-got.html
+++ b/app/views/new/ucas-not-yet-got.html
@@ -20,7 +20,7 @@
           * Do not accept applications from candidates who need to take an equivalence test
           * Do not accept applications from candidates who do not have the qualification but expect to have it before the course begins -->
 
-        <p>By law, all applicants need a minimum GCSE grade of C (or 4), or an equivalent,&nbsp;in:</p>
+        <p>By law, all applicants need a GCSE grade of C (or level 4), or an equivalent,&nbsp;in:</p>
         <ul class="govuk-list govuk-list--bullet">
           <li>English</li>
           <li>Mathematics</li>
@@ -29,26 +29,24 @@
           {% endif %}
         </ul>
 
-        <p>Say if you will accept applications from candidates who haven’t gained these qualifications yet, or who need to take an equivalency test.</p>
         <hr class="govuk-section-break govuk-section-break--m">
-
-        <h2 class="govuk-heading-l">Receive applications from candidates who haven’t gained these qualifications yet?</h2>
-        <p>These are candidates who expect to have at least a grade C (or 4) in English{% if data[code + '-phase'] == 'Primary' %}, Mathematics and Science{% else %} and Mathematics{% endif %} before the beginning of the course. If their application is successful they are usually given a conditional offer.</p>
+        <h2 class="govuk-heading-m">Will you receive applications from candidates who haven’t gained these qualifications yet?</h2>
+        <p>These are candidates who expect to have the qualifications before the beginning of the course. If their application is successful, they’ll usually get a conditional offer.</p>
 
         {% set notYetFields = [
           {
             name: 'Yes (recommended)'
           },
           {
-            name: 'No – UCAS will prevent these candidates from sending you their application'
+            name: 'No – UCAS will block applications from these candidates'
           }
         ] %}
 
         {{ macros.radioGroup(code + '-no-qualifications-yet', notYetFields)}}
 
-        <hr class="govuk-section-break govuk-section-break--l">
-        <h2 class="govuk-heading-l">Receive applications from candidates who need to take an equivalency test?</h2>
-        <p>These are candidates who won’t have the minimum GCSE qualifications and need to pass an equivalency test to meet the required knowledge level.</p>
+        <hr class="govuk-section-break govuk-section-break--m">
+        <h2 class="govuk-heading-m">Will you accept equivalency tests instead of GSCEs?</h2>
+        <p>If candidates don’t have the minimum GCSEs, they can take an equivalency test, to show they have the required knowledge to start the course. </p>
 
         {% set primarySubjects = [
           {
@@ -77,7 +75,7 @@
         ] %}
 
         {% set moreEquivalency %}
-          <h3 class="govuk-heading-s">Which GCSE subjects is an equivalency test offered in?</h3>
+          <h3 class="govuk-heading-s">Which subjects will you accept equivalency tests in?</h3>
           {{ macros.checkboxGroup(code + '-equivalency-subjects', primarySubjects if (data[code + '-phase'] == 'Primary') else secondarySubjects)}}
         {% endset %}
 
@@ -87,7 +85,7 @@
             more: moreEquivalency
           },
           {
-            name: 'No – UCAS will prevent these candidates from sending you their application'
+            name: 'No – UCAS will block applications from these candidates'
           }
         ] %}
 
